<resources>
    <string name="app_name">Bill Please</string>
    <string name="amount">Amount: </string>
    <string name="pax">Number of Pax: </string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="numpax">Enter Pax</string>
    <string name="discount">Discount(%): </string>
    <string name="enterdiscount">Enter discount:</string>
    <string name="total_bill">Total Bill: </string>
    <string name="each_pays">Each Pays:</string>
    <string name="reset">reset</string>
    <string name="split">Split</string>
</resources>
